slider button hover fixed, align left

--- a/src/styles/_main-info.scss
+++ b/src/styles/_main-info.scss
@@ -4,6 +4,7 @@
   margin-top: -2px;
   height: 680px;
   border-radius: 0 0 0 25px;
+  position: relative;
   &__text {
     max-width: 335px;
   }
@@ -11,7 +12,6 @@
     margin: auto;
     max-width: $content-max-width;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
   }
 
   &__title {
